# kplc-outage-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: 23_06_2022.rs  web.rs  web2.rs
src/: api.rs  client.rs  data.rs  free_convert.rs  lib.rs
test_files/: 23.06.2022.result.txt  23.06.2022.txt  Temp1
