[package]
name = "kplc-outage-parser"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Brian Orwe <brian.orwe@gmail.com>"]
description  = "A library to give output of latest data from kplc outages pdf @ https://kplc.co.ke/category/view/50/planned-power-interruptions"
repository = "https://github.com/Borwe/kplc-outage-parser"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.56"
lazy_static = "1.4.0"
regex = "1.5"

[dev-dependencies]
dotenv = "0.15.0"
